# cn.org.linyaps.preloader

./: .gitignore  CMakeLists.txt  README.md  linglong.yaml  main.cpp  preloader.qrc
qml/: Main.qml
sw64/: linglong.yaml
